--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+<header>
+    <div>
 <h1>Heather</h1>
 
 <h3>"Launching Soon..."</h3>
 
 <p> 13 February, 2024</p>
+    </div>
+</header>
 
+<section>
+    <div>
 <h3>
     Motivation:
     <br> <br>
@@ -20,6 +27,14 @@
         I want to code so I can gain meaningful and lucrative employment doing something fun.
 </i>
 </h3>
+    </div>
+</section>
+
+
+<footer>
+  &copy 2024 Heather Flanders
+</footer>
+
 
 
 
